--- a/test/fixtures/registers.yml
+++ b/test/fixtures/registers.yml
@@ -1,15 +1,15 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
 one:
-  references: 
+  user: 
   date: 2012-11-12
   description: MyString
   amount: 1
-  type: 
+  balance_type: MyString
 
 two:
-  references: 
+  user: 
   date: 2012-11-12
   description: MyString
   amount: 1
-  type: 
+  balance_type: MyString
